2012-07-10  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (_SplittingBuffer._active): Mark as inactive after
	we've seen EOFs on both streams, don't wait for a TLS close notify and
	FIN.

	* src/double_tls.py (_debug): Update sample to store output in per-PID
	files, and disable buffering.

	* src/double_tls.py (_CombiningBuffer._handle_errors): Don't send
	EOF markers if the destination has been already shut down for other
	reasons.

	* src/double_tls.py (_SplittingBuffer._handle_errors): Fix class name
	in debug log.

2012-06-25  Miloslav Trmač  <mitr@redhat.com>

	* tests/basic.at (Basic functionality): Replace GnuPG version by a
	constant string before comparing the public key.
	* tests/imported-public-key.asc: Replace GnuPG version by a constant
	string.

	* Makefile.am (installcheck-local): Make sure the test suite is
	up-to-date before running it.

2012-06-03  Miloslav Trmač  <mitr@redhat.com>

	* Makefile.am (pythondir): Override Python installation location.
	(python_PYTHON, nodist_python_PYTHON): Rename from pkgdata_PYTHON
	and nodist_pkgdata_PYTHON to work around automake's placement
	restrictions.  All users updated.

2011-06-17  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (BridgeConnection): Rename self.handler to
	self.__handler.
	(BridgeConnection.__forward_request_headers): Rename from
	forward_request_headers.
	(BridgeConnection.__forward_reply_headers): Rename from
	forward_reply_headers.
	(BridgeConnection.__forward_reply_payload): Rename from
	forward_reply_payload.
	(BridgeConnection.__terminate_client_connection): Rename from
	terminate_client_connection.
	(BridgeConnection.__finalize): Rename from finalize.

	* src/bridge.py (BridgeConnection.handle_connection): Move from
	a top-level function.

	* src/bridge.py (handle_connection): Move all connection-specific code
	from bridge_one_request here.

	* src/bridge.py (fas_user_is_in_group): Move into infrastructure
	section.
